--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,4 +1,11 @@
+
+platform :ios, '13.0'
 use_frameworks!
+
+source 'https://github.com/morapelker/tedooo-pod-repo.git'
+#source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
+
 target 'TedoooOnBoardingApiImpl_Tests' do
   pod 'TedoooOnBoardingApiImpl', :path => '../'
   
